# surrealdb-migrations-issue

./: .surrealdb  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app-main/: Cargo.toml
app-main/tests/: test.rs
app-main/tests/deep/: test.rs
surrealdb/migrations/definitions/: _initial.json
surrealdb/schemas/: user.surql
