[package]
name = "app-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
once_cell = "1.19.0"
surrealdb = "1.2.0"
surrealdb-migrations = "1.0.1"
testcontainers = "0.15.0"
tokio = "1.36.0"
